tests/snapshots/split_match__insta_split_match_multiple_delimiters_in_item.snap
---
source: tests/split_match.rs
expression: h.buffer_view()
---
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"  a:bc:cd                                                                       "
"  x:y:z                                                                         "
"> a:b:c                                                                         "
"  3/3                                                                        0/0"
">                                                                               "
