tests/snapshots/split_match__insta_split_match_no_delimiter_in_item-2.snap
---
source: tests/split_match.rs
expression: h.buffer_view()
---
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"> foobar                                                                        "
"  1/2                                                                        0/0"
"> foo                                                                           "
