tests/snapshots/split_match__insta_split_match_or-2.snap
---
source: tests/split_match.rs
expression: h.buffer_view()
---
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"  x:yz                                                                          "
"> a:bc                                                                          "
"  2/3                                                                        0/0"
"> a:b | x:y                                                                     "
