tests/snapshots/split_match__insta_split_match_or.snap
---
source: tests/split_match.rs
expression: h.buffer_view()
---
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"  z:ab                                                                          "
"  x:yz                                                                          "
"> a:bc                                                                          "
"  3/3                                                                        0/0"
">                                                                               "
