tests/snapshots/split_match__insta_split_match_query_before_delimiter.snap
---
source: tests/split_match.rs
expression: h.buffer_view()
---
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"  fbaz:boo                                                                      "
"  baz:foo                                                                       "
"  foo:qux                                                                       "
"  baz:qux                                                                       "
"> foo:bar                                                                       "
"  5/5                                                                        0/0"
">                                                                               "
